[gd_scene load_steps=9 format=3 uid="uid://d3n2b5wrjdhu0"]

[ext_resource type="Texture2D" uid="uid://b0ve8ykr0jtuh" path="res://assets/sprites/animals/owl.png" id="1_8onil"]
[ext_resource type="Script" uid="uid://cxwtqq4pmd3d6" path="res://views/gameplay/animal.gd" id="1_r863m"]
[ext_resource type="Resource" uid="uid://d25us6tpdwjpm" path="res://resources/animal_data/owl.tres" id="2_clve3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.15, 0.15, 0.2, 0.95)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_size = 3
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_keybg"]
bg_color = Color(0.05, 0.05, 0.05, 0.85)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.4, 0.4, 0.5, 0.6)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 2
shadow_offset = Vector2(0, 2)

[sub_resource type="Animation" id="Animation_cooldown_end"]
resource_name = "cooldown_end"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Content/IconContainer/CooldownOverlay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.75), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Content/IconContainer/Icon:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 2, 1),
"update": 0,
"values": [Color(0.4, 0.4, 0.4, 1), Color(1.15, 1.15, 1.15, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Content/IconContainer/Icon:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(2, 0.5, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.08, 1.08), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_cooldown_start"]
resource_name = "cooldown_start"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Content/IconContainer/CooldownOverlay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.75)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Content/IconContainer/Icon:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.4, 0.4, 0.4, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_anims"]
_data = {
&"cooldown_end": SubResource("Animation_cooldown_end"),
&"cooldown_start": SubResource("Animation_cooldown_start")
}

[node name="Animal" type="PanelContainer"]
custom_minimum_size = Vector2(128, 128)
offset_right = 128.0
offset_bottom = 148.0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")
script = ExtResource("1_r863m")
animal_data = ExtResource("2_clve3")

[node name="Content" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="IconContainer" type="Control" parent="Content"]
custom_minimum_size = Vector2(116, 116)
layout_mode = 2

[node name="Icon" type="TextureRect" parent="Content/IconContainer"]
layout_mode = 1
offset_right = 116.0
offset_bottom = 116.0
texture = ExtResource("1_8onil")
expand_mode = 1
stretch_mode = 5

[node name="CooldownOverlay" type="ColorRect" parent="Content/IconContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 0.85)

[node name="KeyBinding" type="PanelContainer" parent="Content/IconContainer"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 34.0
offset_bottom = 30.0
theme_override_styles/panel = SubResource("StyleBoxFlat_keybg")

[node name="MarginContainer" type="MarginContainer" parent="Content/IconContainer/KeyBinding"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 2

[node name="Label" type="Label" parent="Content/IconContainer/KeyBinding/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 1, 1)
theme_override_font_sizes/font_size = 16
text = "S"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttackCount" type="PanelContainer" parent="Content/IconContainer"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_top = 81.0
offset_right = -4.0
offset_bottom = 110.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_keybg")

[node name="MarginContainer" type="MarginContainer" parent="Content/IconContainer/AttackCount"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Content/IconContainer/AttackCount/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="CurrentLabel" type="Label" parent="Content/IconContainer/AttackCount/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.95, 0.85, 1)
theme_override_font_sizes/font_size = 16
text = "5"
vertical_alignment = 1

[node name="SlashLabel" type="Label" parent="Content/IconContainer/AttackCount/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.65, 1)
theme_override_font_sizes/font_size = 13
text = "/"
vertical_alignment = 1

[node name="MaxLabel" type="Label" parent="Content/IconContainer/AttackCount/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.65, 1)
theme_override_font_sizes/font_size = 13
text = "5"
vertical_alignment = 1

[node name="EnergyBar" type="HBoxContainer" parent="Content/IconContainer"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -42.0
offset_top = -26.0
offset_right = 42.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 3
alignment = 1

[node name="Recovery" type="Timer" parent="."]

[node name="AttackInterval" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_anims")
}

[connection signal="timeout" from="Recovery" to="." method="_on_recovery_timer_timeout"]
[connection signal="timeout" from="AttackInterval" to="." method="_on_attack_interval_timer_timeout"]
